--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
     <!-- Required Social Preview MetaTags -->
 
     <!-- Primary Meta Tags -->
-    <meta name="title" content="Social Proof Section | FrontEndMentor.io Challenge by ImranAvenger">
+    <meta name="title" content="Clipboard Landing Page | FrontEndMentor.io Challenge by ImranAvenger">
     <meta name="description"
-        content="Social Proof Section design is a front end challenge from frontendmentor.io . This challenge is completed by ImranAvenger using HTML, CSS">
+        content="Clipboard Landing Page design is a front end challenge from frontendmentor.io . This challenge is completed by ImranAvenger using HTML, CSS">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://github.com/ImranAvenger/social-proof-section">
-    <meta property="og:title" content="Social Proof Section | FrontEndMentor.io Challenge by ImranAvenger">
+    <meta property="og:title" content="Clipboard Landing Page | FrontEndMentor.io Challenge by ImranAvenger">
     <meta property="og:description"
-        content="Social Proof Section design is a front end challenge from frontendmentor.io . This challenge is completed by ImranAvenger using HTML, CSS">
-    <meta property="og:image" content="assets/images/desktop-design.jpg">
+        content="Clipboard Landing Page design is a front end challenge from frontendmentor.io . This challenge is completed by ImranAvenger using HTML, CSS">
+    <meta property="og:image" content="./images/desktop-design.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://github.com/ImranAvenger/social-proof-section">
-    <meta property="twitter:title" content="Social Proof Section | FrontEndMentor.io Challenge by ImranAvenger">
+    <meta property="twitter:title" content="Clipboard Landing Page | FrontEndMentor.io Challenge by ImranAvenger">
     <meta property="twitter:description"
-        content="Social Proof Section design is a front end challenge from frontendmentor.io . This challenge is completed by ImranAvenger using HTML, CSS">
-    <meta property="twitter:image" content="assets/images/desktop-design.jpg">
+        content="Clipboard Landing Page design is a front end challenge from frontendmentor.io . This challenge is completed by ImranAvenger using HTML, CSS">
+    <meta property="twitter:image" content="./images/desktop-design.jpg">
 
     <!-- End of Required Social Preview MetaTags -->
     
